# Synthesis-Dark-Theme

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Gulpfile.js  Makefile  PKGBUILD  README.md  TODO.md  index.theme  package.json  pyproject.toml  requirements.md  synthesis-dark-suite.install  transform_colors.py
.github/workflows/: ci.yml
cinnamon/: _common.scss  cinnamon-dark.css
docs/: AUR.md  COLOR-STRATEGY.md  COLORSCHEME.md  ICONS.md  ICON_RECONCILIATION_REPORT.md  MIGRATION_STATUS.md  PKGBUILD.md  PNG_SVG_PARITY_AUDIT.md  PNG_WRAPPER_PROMOTION_REPORT.md  ROADMAP.md  STANDARDS.md  SVG_FIDELITY_RECONCILIATION.md  SVG_MIGRATION_REPORT.md  TASKS.md  THEORY.md  USAGE.md
extras/: README.md
gnome-shell/: _colors.scss  _common.scss  gnome-shell.css
gtk-2.0/: gtkrc  links.fish
gtk-3.0/: gtk-widgets-assets.css  gtk.css
gtk-3.20/: _colors.scss  gtk-dark.css
gtk-4.0/: _colors.scss  gtk-dark.css  gtk.css
kde/cursors/: build.sh
metacity-1/: metacity-theme-3.xml  metacity-theme.xml
src/: colors.json  render-wm-assets-hidpi.py  render-wm-assets.py  wm_controls.fish
tests/: test_color_consistency.py  test_css_valid.py  test_embed_png_as_svg.py  test_icon_variants.sh  test_materialize_runtime_asset_svgs.py  test_pkgbuild.sh  test_promote_icon_backend.py  test_promote_png_wrappers.py  test_reconcile_svg_fidelity.py  test_reproducibility.sh  test_svg_valid.py  test_transform_colors.py  test_vectorize_assets.py  test_verify_svg_parity.py
upstream/: MANIFEST.md
xfwm4/: render-assets.sh  render_assets.fish
(+1345 files in other folders)
