[project]
name = "synthesis-dark-tools"
version = "2.0.0"
description = "Build and color-transform tools for the Synthesis-Dark theme suite"
requires-python = ">=3.11"
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py311']
